--- a/OilChartHybrid/src/pages/home/home.scss
+++ b/OilChartHybrid/src/pages/home/home.scss
@@ -1,11 +1,25 @@
 page-home {
     .chart {
         width: 100%;
-        height: calc(100% - 44px);
+        height: 100%;
     }
     #chartdiv {
         width: 100%;
         height: 100%;
+    }
+
+    #options {
+        position:absolute;
+        width: 100%;
+        height: 100%;
+        z-index: 100;
+    }
+
+    #info {
+        position:absolute;
+        width: 100%;
+        height: 100%;
+        z-index: 100;
     }
 
     #loading {
@@ -26,95 +40,8 @@ page-home {
         }
     }
 
-    #mainMenuContent {
-        padding: 8px;
-        background: #f1f1f1;
-    }
-
-    .container {
-        .title {
-            color: #777777;
-            z-index: 1;
-            position: relative;
-            box-sizing: border-box;
-
-            b {
-                background: #f1f1f1;
-                margin-left: 10px;
-                padding: 0px 3px;
-            }
-        }
-
-        .content {
-            position: relative;
-            z-index: 0;
-            margin-top: -5px;
-            padding-top: 12px;
-            padding-bottom: 12px;
-            padding: 8px;
-            border: 1px solid #d0d0d0;
-
-            ion-list {
-                overflow: auto;
-            }
-
-            ion-item {
-                background: transparent !important;
-            }
-        }
-    }
-
-    #reset, #view {
-        border-top: 1px solid #d0d0d0;
-        border-left: 1px solid #d0d0d0;
-        border-bottom: 1px solid #aeaeae;
-        border-right: 1px solid #aeaeae;
-        background: #f5f5f5;
-        background: linear-gradient(#ffffff, #f5f5f5, #e7e7e7);
-        padding: 4px 3px;
-        border-radius: 4px;
-        -moz-border-radius: 4px;
-        -webkit-border-radius: 4px;
-        cursor: pointer;
-        font-weight: bold;
-        text-align: center;
-        width: 100%;
-    }
-
-    #reset {
-        color: #df0b0b;
-    }
-
-    #view {
-        color: #1ba0b7;
-    }
-
-    #reset:hover {
-        border-top: 1px solid #e35959;
-        border-left: 1px solid #e35959;
-        border-bottom: 1px solid #9f1c1c;
-        border-right: 1px solid #9f1c1c;
-        background: #be2c2c;
-        background: linear-gradient(#e14747,#be2c2c, #be1e1e);
-        color: #fff;
-    }
-
-    #view:hover {
-        border-top: 1px solid #1ba0b7;
-        border-left: 1px solid #1ba0b7;
-        border-bottom: 1px solid #0d7e92;
-        border-right: 1px solid #0d7e92;
-        background: #1192a9;
-        background: linear-gradient(#239aaf,#1192a9, #0d7e92);
-        color: #fff;
-    }
-
     .full-width {
         max-width: 100%;
-    }
-
-    #forecasters {
-        max-height: 200px;
     }
 
     #dateRangeText {
