--- a/OilChartHybrid/src/theme/variables.scss
+++ b/OilChartHybrid/src/theme/variables.scss
@@ -13,7 +13,6 @@
 $text-color:        #000;
 $background-color:  #fff;
 
-
 // Named Color Variables
 // --------------------------------------------------
 // Named colors makes it easy to reuse colors on various components.
@@ -27,9 +26,9 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  navbarColor:#d55226
 );
-
 
 // App iOS Variables
 // --------------------------------------------------
@@ -69,3 +68,10 @@ $colors: (
 
 $ionicons-font-path: "../assets/fonts";
 @import "ionicons";
+
+.modal-wrapper {
+  left: 0 !important;
+  top: 0 !important;
+  width: 100% !important;
+  height: 100% !important;
+}
