Fix minor bugs.

--- a/OilChartHybrid/src/pages/home/home.scss
+++ b/OilChartHybrid/src/pages/home/home.scss
@@ -3,6 +3,12 @@ page-home {
         width: 100%;
         height: 100%;
     }
+
+    .logo {
+        height: 44px;
+        vertical-align: middle;
+    }
+    
     #chartdiv {
         width: 100%;
         height: 100%;
