--- a/OilChartHybrid/src/pages/information/informatino.scss
+++ b/OilChartHybrid/src/pages/information/informatino.scss
@@ -3,15 +3,15 @@ page-information {
 
     .main {
         height: 100%;
-        background-image: url('../../assets/img/background.png');
-        background-position: 50% 50%;
-        background-repeat: no-repeat;
-        background-size: cover;
     }
 
     .content {
         width: 100%;
         height: 100%;
         background-color: white;
+    }
+
+    .question {
+        font-weight: bold;
     }
 }
